# compas_ppc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  environment.yml  index.html  pyproject.toml  requirements-dev.txt  tasks.py  versions.json
.github/workflows/: build.yml  docs.yml  release.yml
0.1.1/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorial.html
0.1.1/api/: compas_ppc.html
docs/: api.rst  conf.py  index.rst  installation.rst
docs/api/: compas_ppc.rst
latest/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
latest/api/: compas_ppc.html
src/: class_primitives.cpp  class_shared_pointer.cpp  class_unique_pointer.cpp  compas.h  primitives.cpp  vectors_copy.cpp  vectors_reference.cpp
src/compas_ppc/: class_primitives.py  primitives.py
stable/: index.html
